crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__tc010_precedence_over_tc008.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC008 [*] Remove quotes from type alias
 --> <filename>:6:16
  |
4 | from typing import TypeAlias
5 |
6 | a: TypeAlias = 'int | None'  # TC008
  |                ^^^^^^^^^^^^
7 | b: TypeAlias = 'int' | None  # TC010
help: Remove quotes
  |
5 |
  - a: TypeAlias = 'int | None'  # TC008
6 + a: TypeAlias = int | None  # TC008
7 | b: TypeAlias = 'int' | None  # TC010

TC010 Invalid string member in `X | Y`-style union type
 --> <filename>:7:16
6 | a: TypeAlias = 'int | None'  # TC008
7 | b: TypeAlias = 'int' | None  # TC010
  |                ^^^^^
