crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-standard-library-import_exempt_type_checking_3.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC003 [*] Move standard library import `typing.Final` into a type-checking block
 --> exempt_type_checking_3.py:5:20
  |
3 | from __future__ import annotations
4 |
5 | from typing import Final, Mapping
  |                    ^^^^^
6 |
7 | Const: Final[dict] = {}
help: Move into type-checking block
   |
4  |
   - from typing import Final, Mapping
5  + from typing import Mapping
6  + from typing import TYPE_CHECKING
7  +
8  + if TYPE_CHECKING:
9  +     from typing import Final
10 |
   |
note: This is an unsafe fix and may change runtime behavior
